--- a/ford-gobike-cleaning.ipynb
+++ b/ford-gobike-cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ford GoBike Analysis"
+    "# Ford GoBike Cleaning"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -50,6 +50,7 @@
        " '.DS_Store',\n",
        " '2017-fordgobike-tripdata.csv',\n",
        " '201806-fordgobike-tripdata.csv',\n",
+       " 'cleaned_datasets',\n",
        " '201903-fordgobike-tripdata.csv',\n",
        " '201805-fordgobike-tripdata.csv',\n",
        " '201812-fordgobike-tripdata.csv',\n",
@@ -64,7 +65,7 @@
        " '201902-fordgobike-tripdata.csv']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +304,7 @@
        "4  2018-02-28 23:15:12.8580  Subscriber  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save un-cleaned master dataset as .csv file\n",
-    "df_v1.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/master-dataset-v1.csv')"
+    "df_v1.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/cleaned_datasets/master-dataset-v1.csv', index=False)"
    ]
   },
   {
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +429,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -460,8 +461,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -543,7 +546,7 @@
        "0  Subscriber                      No          Male             1988.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,8 +585,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -594,7 +599,7 @@
        "Name: bike_share_for_all_trip, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,12 +609,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3436488 entries, 0 to 3436487\n",
+      "Data columns (total 16 columns):\n",
+      "bike_id                    3436488 non-null int64\n",
+      "duration_sec               3436488 non-null int64\n",
+      "start_time                 3436488 non-null object\n",
+      "end_time                   3436488 non-null object\n",
+      "start_station_id           3423972 non-null float64\n",
+      "start_station_name         3423972 non-null object\n",
+      "start_station_latitude     3436488 non-null float64\n",
+      "start_station_longitude    3436488 non-null float64\n",
+      "end_station_id             3423972 non-null float64\n",
+      "end_station_name           3423972 non-null object\n",
+      "end_station_latitude       3436488 non-null float64\n",
+      "end_station_longitude      3436488 non-null float64\n",
+      "user_type                  3436488 non-null object\n",
+      "bike_share_for_all_trip    3436488 non-null object\n",
+      "member_gender              3210289 non-null object\n",
+      "member_birth_year          3209853 non-null float64\n",
+      "dtypes: float64(7), int64(2), object(7)\n",
+      "memory usage: 419.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_v1.info(null_counts=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Issue 3:\n",
     "#### Define\n",
-    "Use .drop() to drop all rows where end_station_id is NaN because these have inaccurate lat and long coordinates, these rows contain nulls in many other columns, they're located in an unimportant northern San Jose area (far outside the city), the company does not include these specific stations on their own website, and its only approx. 12500 entries in a dataset with over 3.25 million entries.\n",
+    "Use .drop() to drop all rows where end_station_id is NaN because these have inaccurate lat and long coordinates, these rows contain nulls in many other columns, they're located in an unimportant northern San Jose area (far outside the city of SF), the company does not include these specific stations on their own website, and its only approx. 12500 entries in a dataset with over 3.25 million entries. These entries are not only a less imortant area, but a very small fraction of the overall dataset.\n",
     "\n",
     "This will also remove the NaNs in end_station_name, start_station_id, and start_station_name.\n",
     "\n",
@@ -619,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -686,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -814,7 +856,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -879,7 +921,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,13 +939,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save un-cleaned master dataset as .csv file\n",
     "df_v2 = df_v1.copy()\n",
-    "df_v2.to_csv('/Users/mattames/Desktop/ford_go_bike_analysis/master-dataset-v2.csv', index=False)"
+    "df_v2.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/cleaned_datasets/master-dataset-v2.csv', index=False)"
    ]
   }
  ],
