Update cleaning notebook

--- a/ford-gobike-cleaning.ipynb
+++ b/ford-gobike-cleaning.ipynb
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save cleaned dataset to .csv file:"
+    "## Save cleaned dataset to csv file:"
    ]
   },
   {
