Restructure univariate duration analysis

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ford GoBike Exploratory Analysis"
+    "# Ford GoBike Exploratory Analysis\n",
+    "\n",
+    "### Description: Exploration into similarities, differences, and patterns between user types"
    ]
   },
   {
@@ -516,19 +518,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Max duration in seconds appears way too high, a 23 hour bike rental cannot be a legitimate rental (could be someone incorrectly returning the bike? If there's multiple of these trips from the same bikes, do we have broken bikes?). I will need to plot the distribution of ride durations and select a reasonable range to focus on.\n",
-    "2. Min birth year of 1983 would make the rider 141 years old. This must be an error and a reasonable age range will need to be selected and focused on.\n",
-    "3. Station latitudes of 0 would place the stations on the equator. The Bay area coordinates should all be between 37 and 38 for latitude and -121 and -123 for longitude."
+    "1. Max duration in seconds appears way too high, a 23 hour bike rental cannot be a legitimate rental (could be someone incorrectly returning the bike? If there's multiple of these trips from the same bikes, do we have broken bikes?). I will need to plot the distribution of ride durations and select a reasonable range to focus on. Take care of this during my univariate exploration.\n",
+    "2. Min birth year of 1983 would make the rider 141 years old. This must be an error and a reasonable age range will need to be selected and focused on. Take care of this during my univariate exploration.\n",
+    "3. Station latitudes of 0 would place the stations on the equator. The Bay area coordinates should all be between 37 and 38 for latitude and -121 and -123 for longitude. Clean this right away."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correct latitude and longitude issues\n",
+    "### Issue 1: \n",
     "\n",
     "#### Define\n",
-    "The only station coordinates outside the expected range are for the test station data entry, so there is no filling or adjusting of values to be done. Use .drop() to drop all rows where start_station_name or end_station_name is \"SF Test Station\"."
+    "Correct the dirty station location data. The only station coordinates outside the expected range are for the test station data entry, so there is no filling or adjusting of values to be done. Just use .drop() to drop all rows where start_station_name or end_station_name is \"SF Test Station\"."
    ]
   },
   {
@@ -2156,7 +2158,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2178,14 +2182,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trip Durations"
+    "## Univariate Exploration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Histogram of durations"
+    "### Trip Duration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Histogram of durations"
    ]
   },
   {
@@ -2377,7 +2388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considering that bike rentals for customers are priced according to a 30 min limit and subscribers at a 45 min limit, we will focus on a 2 hour trip duration max. This is a reasonable range based on the pricing and how long the bulk of trip durations are."
+    "Considering that bike rentals for customers are priced according to a 30 min limit and subscribers at a 45 min limit, we will focus on a 2 hour trip duration max. This is a reasonable range based on the pricing system and the bulk of trip durations from the above chart."
    ]
   },
   {
