Restructure univariate birth year analysis

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Ford GoBike Exploratory Analysis\n",
     "\n",
-    "### Description: Exploration into similarities, differences, and patterns between user types"
+    "### Description: Exploration into similarities, differences, and patterns between user types\n",
+    " - Focus on duration, gender, age, user type, and month-to-month comparisons\n",
+    " - Times, stations, neighborhoods, and other location data will be explored in Part II"
    ]
   },
   {
@@ -2395,14 +2397,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Histogram of durations with smaller scope"
+    "#### Histogram of durations with focus on bulk of data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2429,7 +2431,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Birth Year"
+    "### Birth Year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Histogram of birth years"
    ]
   },
   {
@@ -2459,9 +2468,9 @@
    "metadata": {},
    "source": [
     "#### Define\n",
-    "We need to filter out impossible and unreasonable birth years.\n",
+    "Filter out impossible and unreasonable birth years.\n",
     "\n",
-    "The oldest living Californian is 112, so it is impossible for someone to be born before 1907. Additionally, we will drop riders above the age of 85 from our dataset for the sake of focusing on the most important trips and riders. It is possible that someone 85+ is using the bikes, but highly unlikely. Therefore this very small portion of the data can be assumed unreliable."
+    " - The oldest living Californian is 112, so it is impossible for someone to be born before 1907. Additionally, we will drop riders above the age of 85 from our dataset for the sake of focusing on the most important trips and riders. It is possible that someone 85+ is using the bikes, but highly unlikely. Therefore, this extremely small portion of the data can be assumed unreliable. It is possible that these users are over 85, but also possible that these were input errors."
    ]
   },
   {
@@ -2541,7 +2550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Birth year distribution with corrections"
+    "#### Histogram of birth years with filtering"
    ]
   },
   {
@@ -2709,14 +2718,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot by age instead of birth year"
+    "#### Histogram of ages with filtering"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2749,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
