Add insight to univariate duration analysis

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -2431,6 +2431,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Insight:\n",
+    " - The vast majority of bike rides fall between 2 and 20 minutes. Does a 2 minute ride make sense? We should include the 1-3 minute bike rides for now because we don't know the distribution of stations yet. It is possible someone rented a bike and rode it to the next nearest station (for example, a quick 3 block trip down a large hill would be much more convenient than walking it), we will keep these trips in our analysis until we have addition information and can confidently exclude them.\n",
+    " - The peak of our distribution is around 6 minutes. Due to this being much lower than anticipated, I am included to believe 2-4 minute trips are certainly possible and should not be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Birth Year"
    ]
   },
