Restructure univariate user type analysis

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -3632,39 +3632,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save progress to csv file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/cleaned_datasets/master-dataset-v3.csv', index=False)"
+    "### User Type"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that I have an accurate idea of the trip duration and user age distributions to focus on, I want to further analyze according to user types."
+    "2 types:\n",
+    " - Subscribers: members paying a monthly or annual fee\n",
+    " - Customers: single-ride users"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trips by user type\n",
-    "2 types: subscribers who are members paying a monthly or annual fee and customers who are single-use users.\n",
-    "\n",
-    "### How many trips is each type responsible for?"
+    "#### Count of trips by user type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 180,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3684,17 +3676,116 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8866341111753238"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "There is clearly a much larger number of of trips from subscribers than customers. What are the average trip durations of each of these 2 user types? If there is a much larger count of trips, does this mean there are more frequent short trips or simply the same durations for trips as customers but more trips in general?"
+    "# Proportion of trips by subscribers\n",
+    "len(df.query('user_type == \"Subscriber\"'))/len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11336588882467626"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Proportion of trips by customers\n",
+    "len(df.query('user_type == \"Customer\"'))/len(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Insight:\n",
+    " - Subscribers make up the vast majority of rides, as expected (over 88% to be exact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Average trip duration by user type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is clearly a much larger number of of trips from subscribers than customers. What are the average trip durations of each of these 2 user types? If there is a much larger count of trips, does this mean there are more frequent short trips or simply the same durations for trips as customers but more trips in general?"
    ]
   },
   {
