--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -3726,6 +3726,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save progress to csv file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save final version of the master dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/cleaned_datasets/master-dataset-v4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the filtered version of the master dataset separately, apply the filters decided upon from the above insights\n",
+    " - Duration: Drop all rows with duration over 120 min\n",
+    " - Age: Drop all rows with age greater than 85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy master dataset\n",
+    "df_filtered = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for duration\n",
+    "df_filtered = df_filtered.query('duration_min < 120.01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    3.181657e+06\n",
+       "mean     1.132922e+01\n",
+       "std      9.547962e+00\n",
+       "min      1.016667e+00\n",
+       "25%      5.733333e+00\n",
+       "50%      9.016667e+00\n",
+       "75%      1.386667e+01\n",
+       "max      1.200000e+02\n",
+       "Name: duration_min, dtype: float64"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm duration filter\n",
+    "df_filtered.duration_min.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for age\n",
+    "df_filtered = df_filtered.query('age < 86')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm filter\n",
+    "df_filtered.age.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to csv file\n",
+    "df_filtered.to_csv('/Users/mattames/Desktop/ford_gobike/all_bikeshare_datasets/cleaned_datasets/filtered-dataset-v1.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
