Introduce Ford GoBike user types

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -3848,9 +3848,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bivariate Exploration\n",
+    "\n",
+    "Compare the following variables across user type: Duration, Gender, and Age\n",
+    "\n",
+    "#### User Types\n",
+    "Subscribers\n",
+    " - Users paying a monthly or annual subscription to use the bikes\n",
+    " - 45 min per ride limit, unlimited rides\n",
+    "\n",
+    "Customers\n",
+    " - Users paying for individual trips\n",
+    " - 30 min per ride limit\n",
+    "\n",
+    "Additionally: Some subscribers are part of a \"Bike Share for All\" Program that offers a discounted, one-time annual membership fee for low-income residents. This feature was not offered in 2017 and Ford GoBike re-established itself as Bay Wheels in mid 2019 and may have changed product offerings. Any new offerings by Bay Wheels would not be relevant to our data from 2017-2018, therefore we will not include this program in this analysis. They will be treated as Subscribers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   },
