Update Ford GoBike user type intro

--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -3855,6 +3855,8 @@
     "\n",
     "Compare the following variables across user type: Duration, Gender, and Age\n",
     "\n",
+    "***Important: Use df_filtered for the remainder of this analysis. The above univariate exploration helped to filter the dataset in order to focus on the bulk of the data and remove outliers.****\n",
+    "\n",
     "#### User Types\n",
     "Subscribers\n",
     " - Users paying a monthly or annual subscription to use the bikes\n",
