--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -2856,7 +2856,7 @@
    "metadata": {},
    "source": [
     "#### Insights:\n",
-    " - 74% of all *trips* are male users, remember this data is the number of trips, not the number of customers. We cannot discover the proportions of customers or subscribers because we do not have rider IDs to track individual riders separate from trips.\n",
+    " - 74% of all trips are male users, remember this data is the number of trips, not the number of customers. We cannot discover the proportions of customers or subscribers because we do not have rider IDs to track individual riders separate from trips.\n",
     " - According to the US Censuc Bureau SF's gender makeup is 49% female and 51% male. This is very different from our above statistic, so do the gender proportions of our users fit the US Census Bureau's statistics but our male rides use the bikes at a much higher rate? Or do our gender proportions by trip accurately represent out users and therefore women are much less likely to sign up for bike share to begin with? We cannot answer these questions with this dataset, however it is important to take note of this."
    ]
   },
@@ -4574,27 +4574,6 @@
    "source": [
     "#### Insights:\n",
     " - Again, subscribers and customers show a very similar trend, with the only major difference being the percentage increase from Feb to Mar"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save all datasets so the final presentation can be completed in a separate Jupyter Notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('df.csv', index=False)\n",
-    "df_subscriber.to_csv('df_subscriber.csv', index=False)\n",
-    "df_customer.to_csv('df_customer.csv', index=False)\n",
-    "df_2018.to_csv('df_2018.csv', index=False)\n",
-    "df_subscriber_2018.to_csv('df_subscriber_2018.csv', index=False)\n",
-    "df_customer_2018.to_csv('df_customer_2018.csv', index=False)"
    ]
   }
  ],
