--- a/ford-gobike-cleaning.ipynb
+++ b/ford-gobike-cleaning.ipynb
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1) Unordered List of Assessments\n",
+    "#### 1) Unordered List of Initial Assessments\n",
     "##### df_v1\n",
     "\n",
     "##### Visual:\n",
@@ -429,7 +429,7 @@
     "#### Define\n",
     "The tidiness issue of observational units per table will be ignored for this analysis, keeping all of this in one table will be beneficial for the following analysis.\n",
     "\n",
-    "However, the columns will be re-ordered in a more logical way that cocneptually separates these observational units while keeing them in the same table.\n",
+    "However, the columns will be re-ordered in a more logical way that conceptually separates these observational units while keeing them in the same table.\n",
     "\n",
     "#### Code"
    ]
@@ -583,7 +583,7 @@
     "### Part 2: Quality\n",
     "### Issue 2:\n",
     "#### Define\n",
-    "Use .fillna() to replace all bike_share_for_all_trip NaNs with \"Not Offered\" since this member type was not offered in 2017.\n",
+    "Use .fillna() to replace all bike_share_for_all_trip NaNs with \"Not Offered\" since this membership type was not offered in 2017.\n",
     "\n",
     "#### Code"
    ]
