Update numbering of cleaning issues

--- a/ford-gobike-cleaning.ipynb
+++ b/ford-gobike-cleaning.ipynb
@@ -425,7 +425,6 @@
    "source": [
     "## Clean:\n",
     "### Part 1: Tidiness\n",
-    "### Issue 1:\n",
     "#### Define\n",
     "The tidiness issue of observational units per table will be ignored for this analysis, keeping all of this in one table will be beneficial for the following analysis.\n",
     "\n",
@@ -581,7 +580,7 @@
    "metadata": {},
    "source": [
     "### Part 2: Quality\n",
-    "### Issue 2:\n",
+    "### Issue 1:\n",
     "#### Define\n",
     "Use .fillna() to replace all bike_share_for_all_trip NaNs with \"Not Offered\" since this membership type was not offered in 2017.\n",
     "\n",
@@ -670,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Issue 3:\n",
+    "### Issues 2, 3, 6, 7:\n",
     "#### Define\n",
     "Use .drop() to drop all rows where end_station_id is NaN because these have inaccurate lat and long coordinates, these rows contain nulls in many other columns, they're located in an unimportant northern San Jose area (far outside the city of SF), the company does not include these specific stations on their own website, and its only approx. 12500 entries in a dataset with over 3.25 million entries. These entries are not only a less imortant area, but a very small fraction of the overall dataset.\n",
     "\n",
@@ -739,10 +738,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Issue 5:\n",
+    "### Issues 4, 5:\n",
     "#### Define\n",
     "\n",
-    "Use .droppna() to drop all rows where member birth year is NaN.\n",
+    "Use .droppna() to drop all rows where member birth year is NaN. This also removes all rows with member_gender NaNs.\n",
     "\n",
     "#### Code"
    ]
@@ -804,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Issue 4:\n",
+    "### Issues 8-13:\n",
     "#### Define\n",
     "Use .astype() and .to_datetime() to convert the following incorrect data types:\n",
     "- bike_id from int to str\n",
