--- a/ford-go-bike-exploratory-analysis.ipynb
+++ b/ford-go-bike-exploratory-analysis.ipynb
@@ -7,8 +7,7 @@
     "# Ford GoBike Exploratory Analysis\n",
     "\n",
     "### Description: Exploration into similarities, differences, and patterns between user types\n",
-    " - Focus on duration, gender, age, user type, and month-to-month comparisons\n",
-    " - Times, stations, neighborhoods, and other location data will be explored in Part II"
+    " - Focus on duration, gender, age, user type, and month-to-month comparisons\n"
    ]
   },
   {
